[package]
name = "eero-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
secrecy = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
